--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
 <html lang="en" dir="ltr">
 
 <head>
@@ -8,7 +8,7 @@
 
 
 <body>
-  <img src="C:\Users\HP\OneDrive\Desktop\MERN Stack\Web Development\HTML Personal Site\Images\Profile Pic.png" alt="Jatin Jain Profile Pic" width="200" height="200">
+  <img src="Images\Profile Pic.png" alt="Jatin Jain Profile Pic" width="200" height="200">
   <h1>Jatin Jain</h1>
   <p>
     <em>Student At <strong><a href="http://sspolytechniccollege.org/home">SS Polytechnical Colege</a></strong></em>
@@ -39,7 +39,7 @@
   <hr size="5" noshade>
 
   <h3>Contact Details</h3>
-  <a href="C:\Users\HP\OneDrive\Desktop\MERN Stack\Web Development\HTML Personal Site\Contacts.html">Contact Details</a>
+  <a href="Contacts.html">Contact Details</a>
 
   <hr size="5" noshade>
 
