--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
   <table cellspacing="80">
     <tr>
-      <td> <img src="C:\Users\HP\OneDrive\Desktop\MERN Stack\Web Development\HTML Personal Site\Images\Profile Pic.png" alt="Jatin Jain Profile Pic" width="250" height="250"></td>
+      <td> <img src="Images\Profile Pic.png" alt="Jatin Jain Profile Pic" width="250" height="250"></td>
       <td>
         <h1>Jatin Jain</h1>
         <p>
